syntax = "proto3";
option csharp_namespace = "Game.Networking.External.Protocol";

import "UUID.proto";

service AccountService {
	rpc GetCharacters(GetCharactersRequest) returns (GetCharactersReply) {}
}

message GetCharactersRequest { }

message GetCharactersReply {
	repeated Character Character = 1;
}

message Character {
	UUID Id = 1;
	string Name = 2;
}